Migrate main page to BS 3

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,4 +1,4 @@
-<div class="hero-unit">
+<div class="jumbotron">
   <h1>Привет, мир!</h1>
   <br>
   <p class="lead">
@@ -9,5 +9,5 @@
     Еще мне очень сильно нравятся Ruby, NODE.JS и MongoDB. В дальнейшем хотел
     бы перейти на них в качестве основных инструментов разработки.
   </p>
-  <p><a href="#!/cv" class="btn btn-primary btn-large">Взглянуть на резюме</a></p>
+  <p><a href="#!/cv" class="btn btn-primary btn-lg">Взглянуть на резюме</a></p>
 </div>
