Begin contacts section

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,4 +1,5 @@
-$fontGray: #888;
+$default: #888;
+$primary: #428bca;
 
 body {
   padding: 0 0 2em 0;
@@ -7,7 +8,7 @@ body {
 .open-sans {
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
-  color: $fontGray;
+  color: $default;
 }
 
 .section {
@@ -20,7 +21,7 @@ body {
     font-family: inherit;
     font-weight: inherit;
     margin: 0 0 1em 0;
-    color: $fontGray;
+    color: $default;
   }
   h3 {
     font-family: inherit;
@@ -39,4 +40,29 @@ body {
 
 .skills {
   line-height: 1.75em;
+}
+
+.social {
+  letter-spacing: .3em;
+  a {
+    color: $default;
+    &:hover {
+      text-decoration: none;
+      .icon-skype {
+        color: $primary;
+      }
+      .icon-envelope {
+        color: #d14836;
+      }
+      .icon-linkedin-sign {
+        color: $primary;
+      }
+      .icon-github {
+        color: #333;
+      }
+      .icon-trello {
+        color: $primary;
+      }
+    }
+  }
 }
