--- a/src/index.jade
+++ b/src/index.jade
@@ -1,6 +1,3 @@
-- var appTitle = "Евгений Скуридин"
-- var pages = {"about-me": "Обо мне", "experience": "Опыт работы", "skills": "Навыки", "contacts": "Контакты"}
-
 doctype 5
 html(lang="ru")
 
@@ -21,6 +18,28 @@ html(lang="ru")
       script(src="https://raw.github.com/aFarkas/html5shiv/master/dist/html5shiv.js")
       script(src="https://raw.github.com/scottjehl/Respond/master/respond.min.js")
     link(rel="stylesheet", href="css/style.css")
+    script.
+      if(location.hostname === 'skurid.in') {
+
+        // Google analytics
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-18951281-4', 'skurid.in');
+        ga('send', 'pageview');
+
+        // Yandex metrika
+        (function (d, w, c) { (w[c] = w[c] || []).push(function() { try {
+          w.yaCounter19444894 = new Ya.Metrika({id:19444894, webvisor:true, clickmap:true, accurateTrackBounce:true,
+            trackHash:true}); } catch(e) { } }); var n = d.getElementsByTagName("script")[0],
+        s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); };
+        s.type = "text/javascript"; s.async = true;
+        s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
+        if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); }
+        else { f(); } })(document, window, "yandex_metrika_callbacks");
+      }
 
   body(data-spy="scroll", data-target=".navbar-collapse")
 
@@ -89,6 +108,57 @@ html(lang="ru")
               Мой первый опыт разработки за деньги. В основном делал небольшие корпоративные сайты.
               Провайдеру необходимо было создать музыкальный портал. Я придумал этот проект, описал то,
               каким он должен быть. В дальнейшем помогал в его разработке и наполнял контентом.
+
+      #skills.section
+        h2.text-center Навыки
+        .row
+          .col-md-4
+            h3 Разработка
+            p.
+              Разработка сайтов с помощью PHP, MYSQL. Оптимизация, автоматизация, подготовка к нагрузкам, интеграция
+              со сторонними сервисами.
+          .col-md-4
+            h3 Управление
+            p.
+              Грамотное составление задач, стараюсь не придумывать ничего лишнего и сосредоточиться только на главном.
+              Лучше сделать немного меньше, но качественно.
+          .col-md-4
+            h3 Чем владею
+            p.skills
+              each val in skills
+                - var label = labels[Math.floor(Math.random() * labels.length)]
+                span(class="label label-"+label)=val
+
+      #contacts.section
+        h2.text-center Контакты
+        .row
+          .col-md-6
+            p &nbsp;
+            p © Yevgeny Skuridin, 2013
+            p.
+              Нашли ошибку? Пожалуйста сообщите об этом в
+              <a href="https://github.com/skuridin/skuridin.github.io/issues">GitHub</a>
+            .social
+              a(href="skype:redfield1990"): span.icon-skype.icon-3x
+              a(href="mailto:i@skurid.in"): span.icon-envelope.icon-3x
+              a(href="http://www.linkedin.com/in/redfield1990"): span.icon-linkedin-sign.icon-3x
+              a(href="https://github.com/skuridin"): span.icon-github.icon-3x
+              a(href="https://trello.com/redfield_ru"): span.icon-trello.icon-3x
+          .col-md-6
+            p &nbsp;
+            form
+              .row
+                .col-xs-12
+                  .form-group
+                    input(type="text", placeholder="Имя")#email-name.form-control
+              .row
+                .col-xs-12
+                  .form-group
+                    textarea(rows="5", placeholder="Сообщение")#email-content.form-control
+              .row
+                .col-xs-12
+                  .form-group
+                    button(type="button")#send-email.btn.btn-primary.col-xs-12 Отправить
 
     script(src="//code.jquery.com/jquery.min.js")
     script(src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js")
