--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -5,26 +5,18 @@ body {
   padding: 0 0 2em 0;
 }
 
-.open-sans {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 300;
-  color: $default;
-}
-
-.section {
+section {
   padding: 5em 0 0 0;
 }
 
 .theme-redfield {
-  @extend .open-sans;
+  color: $default;
   h2 {
-    font-family: inherit;
     font-weight: inherit;
     margin: 0 0 1em 0;
     color: $default;
   }
   h3 {
-    font-family: inherit;
     font-weight: inherit;
     color: black;
   }
