--- a/src/index.jade
+++ b/src/index.jade
@@ -4,10 +4,8 @@ html(lang="ru")
   head
     meta(charset="UTF-8")
     title #{appTitle} | Web-разработчик
-    meta(name="description",
-      content="Web-разработчик. Использую PHP, MYSQL, Yii. Работал во Flatora, КупиОтпуск, Vault Couture")
-    meta(name="keywords",
-      content="разработка, web, php, mysql, yii, laravel, gruntjs, angularjs, flatora, купиотпуск, vault couture")
+    meta(name="description", content=description)
+    meta(name="keywords", content=keywords)
     meta(name="author", content=appTitle)
     meta(name="robots", content="index,follow")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
