--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,6 +1,10 @@
 $default: #888;
 $primary: #428bca;
 
+body, h1, h2, h3, h4, h5, h6 {
+  font-family: 'Open Sans', sans-serif;
+}
+
 body {
   padding: 0 0 2em 0;
 }
