--- a/src/index.jade
+++ b/src/index.jade
@@ -1,6 +1,5 @@
 doctype 5
 html(lang="ru")
-
   head
     meta(charset="UTF-8")
     title #{appTitle} | Web-разработчик
@@ -9,6 +8,7 @@ html(lang="ru")
     meta(name="author", content=appTitle)
     meta(name="robots", content="index,follow")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,cyrillic")
     link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css")
     link(rel="stylesheet", href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css")
     //if lt IE 9
