--- a/src/index.jade
+++ b/src/index.jade
@@ -1,12 +1,13 @@
 doctype html
-html
+html(lang="ru")
   head
     meta(charset="UTF-8")
     title #{appTitle} | Web-разработчик
     meta(name="description", content=description)
     meta(name="keywords", content=keywords)
     meta(name="author", content=appTitle)
-    meta(name="robots", content="index,follow")
+    meta(name="robots", content="all")
+    meta(name="google-site-verification", content="UjyqYrXn-j_1Ev5JhHL0jWq_7R7SvANjcAuwYZYKSso")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,cyrillic")
     link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css")
