--- a/src/index.jade
+++ b/src/index.jade
@@ -122,6 +122,7 @@ html(lang="ru")
               a(href="http://www.linkedin.com/in/redfield1990"): span.icon-linkedin-sign.icon-3x
               a(href="https://github.com/skuridin"): span.icon-github.icon-3x
               a(href="https://trello.com/redfield_ru"): span.icon-trello.icon-3x
+              a(href="https://plus.google.com/+YevgenySkuridin?rel=author"): span.icon-google-plus.icon-3x
           .col-md-6
             p &nbsp;
             form
