--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -61,6 +61,9 @@ section {
       .icon-trello {
         color: $primary;
       }
+      .icon-google-plus {
+        color: #d14836;
+      }
     }
   }
 }
