--- a/src/index.jade
+++ b/src/index.jade
@@ -12,8 +12,8 @@ html(lang="ru")
     link(href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css", rel="stylesheet")
     link(href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css", rel="stylesheet")
     //if lt IE 9
-      script(src="https://raw.github.com/aFarkas/html5shiv/master/dist/html5shiv.js")
-      script(src="https://raw.github.com/scottjehl/Respond/master/respond.min.js")
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     link(rel="stylesheet", href="css/style.css")
 
   body(itemscope, itemtype="http://schema.org/Person")
