--- a/src/index.jade
+++ b/src/index.jade
@@ -1,8 +1,9 @@
 doctype html
 html(lang="ru")
   head
-    meta(charset="UTF-8")
-    title #{appTitle} | Web-разработчик
+    meta(charset="utf-8")
+    meta(http-equiv="X-UA-Compatible", content="IE=edge")
+    title #{appTitle} — Web-разработчик
     meta(name="description", content=description)
     meta(name="author", content=appTitle)
     meta(name="robots", content="all")
