Change photo size

--- a/src/index.jade
+++ b/src/index.jade
@@ -23,7 +23,7 @@ html(lang="ru")
         h2.text-center Привет, мир!
         .row
           .col-md-2.visible-lg.visible-md
-            img(src="img/i.jpg", alt="Суровый", itemprop="image").img-thumbnail
+            img(src="img/i.jpg", alt="Суровый", itemprop="image").img-rounded.img-responsive
           .col-md-10.bio
             p.
               Меня зовут Женя, мне 23 года и я
