--- a/src/index.jade
+++ b/src/index.jade
@@ -26,14 +26,14 @@ html(lang="ru")
           .col-md-10.bio
             p.
               Меня зовут Женя, мне 23 года и я
-              <strong itemprop="jobTitle">web-разработчик</strong>. Пишу на <strong>PHP</strong>,
-              использую <strong>MYSQL</strong>, <strong>Yii</strong>, <strong>Laravel</strong>,
+              <strong itemprop="jobTitle">web-разработчик</strong>. Пишу на <strong>PHP</strong>, <strong>Ruby</strong>,
+              использую <strong>MYSQL</strong>, <strong>Ruby on Rails</strong>, <strong>Yii</strong>,
               <strong>GruntJs</strong> и т.д. и т.п. Еще мне очень сильно нравятся
-              <strong>Ruby</strong>, <strong>NODE.JS</strong> и <strong>MongoDB</strong>.
-              В дальнейшем хотел бы перейти на них в качестве основных инструментов разработки.
+              <strong>NODE.JS</strong>, <strong>MongoDB</strong> и все, что связано с frontend, но опыта пока мало.
             p.
               Родился в Узбекистане. Пишу код с 2009 года. Весной 2012 года переехал в Москву, чтобы трудиться
-              над стартапом <strong>flatora</strong>.ru, позже перебрался в Екатеринбург.
+              над стартапом <strong>flatora</strong>.ru, позже перебрался в Екатеринбург. Мечтаю переехать в
+              Европу или Северную Америку.
               Люблю точность, новые технологии, упрощать и автоматизировать.
 
       section#experience
