--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -10,10 +10,10 @@ body {
 }
 
 .logo {
-    font-size: 42px;
-    text-align: center;
-    color: #f15e4a;
-    font-weight: 500;
+    width: 60px;
+    height: 60px;
+    display: block;
+    margin: 0 auto;
 }
 
 .about {
