--- a/src/style.styl
+++ b/src/style.styl
@@ -1,2 +1,34 @@
 body
-  background-color white
+  font-family "Dosis"
+  font-weight 300
+  font-size 14px
+.pull-left
+  float left
+.pull-right
+  float right
+.text-muted
+  color #999
+
+.container
+  width 90%
+  margin 1em auto
+.header
+  margin-bottom 2em
+.main-info
+  text-align right
+  h1
+    margin 0
+    font-size 24px
+    font-weight 300
+  p
+    margin 0
+  a
+    text-decoration none
+    color #b000b5
+.photo
+  size = 100px
+  width size
+  height size
+  background-image url('./img/iam.jpg')
+  background-size size
+  border-radius 50%
