--- a/src/style.styl
+++ b/src/style.styl
@@ -1,5 +1,5 @@
 body
-  font-family "Open Sans"
+  font-family "Exo 2", "Open Sans", Arial, sans-serif
   font-weight 300
 .wrapper-table
   display table
