SVG logo inside HTML

--- a/src/style.styl
+++ b/src/style.styl
@@ -11,12 +11,7 @@ body
   display: table-cell
   vertical-align: middle
 .logo
-  size = 64px
-  width size
-  height size
-  background-image url('./img/logo.svg')
-  background-size size
-  border-radius 50%
+  display block
   margin 1em auto
 .info
   margin 0 auto
