--- a/src/style.styl
+++ b/src/style.styl
@@ -1,2 +1,35 @@
 body
   font-family "Exo 2", "Open Sans", Arial, sans-serif
+
+.wrapper-table
+  display table
+  position absolute
+  width 100%
+  height 100%
+
+.wrapper-cell
+  display table-cell
+  vertical-align middle
+
+.wrapper
+  margin auto
+  text-align center
+
+.home-page
+  margin-top -8em
+  font-weight 300
+
+.home-page-logo
+  width 64px
+  height 64px
+
+.home-page-info
+  font-size 24px
+  margin-top 1em
+
+.home-page-links
+  margin-top 1em
+  a
+    display inline-block
+    margin 0 0.5em
+    color #c55
