--- a/src/style.styl
+++ b/src/style.styl
@@ -33,3 +33,17 @@ body
     display inline-block
     margin 0 0.5em
     color #c55
+
+.cv-page
+  font-weight 300
+  padding-top 1em
+  h1
+    margin-top 8px
+  .label
+    font-weight 300
+    margin-right 0.3em
+    display inline-block
+
+.cv-page-photo
+  max-width 100px
+  max-height 100px
