--- a/src/style.styl
+++ b/src/style.styl
@@ -37,13 +37,18 @@ body
 .cv-page
   font-weight 300
   padding-top 1em
-  h1
-    margin-top 8px
   .label
     font-weight 300
     margin-right 0.3em
     display inline-block
 
+.cv-my-name
+  margin-top 8px
+
 .cv-page-photo
   max-width 100px
   max-height 100px
+
+@media (min-width: 768px)
+  .cv-my-name
+    margin-top 25px
