--- a/src/style.styl
+++ b/src/style.styl
@@ -49,6 +49,9 @@ body
   max-width 100px
   max-height 100px
 
+.cv-back-to-home
+  margin-bottom 1em
+
 @media (min-width: 768px)
   .cv-my-name
     margin-top 25px
