--- a/src/style.styl
+++ b/src/style.styl
@@ -52,6 +52,12 @@ body
 .cv-back-to-home
   margin-bottom 1em
 
+.cv-career-item
+  margin-bottom 2em
+
+.cv-career-content
+  padding-left 1.3em
+
 @media (min-width: 768px)
   .cv-my-name
     margin-top 25px
