--- a/src/style.styl
+++ b/src/style.styl
@@ -1,17 +1,18 @@
 body
   font-family "Exo 2", "Open Sans", Arial, sans-serif
+  color #333
 
-.wrapper-table
+.wrapper
   display table
   position absolute
   width 100%
   height 100%
 
-.wrapper-cell
+.wrapper__cell
   display table-cell
   vertical-align middle
 
-.wrapper
+.wrapper__content
   margin auto
   text-align center
 
@@ -19,45 +20,25 @@ body
   margin-top -8em
   font-weight 300
 
-.home-page-logo
+.home-page__logo
   width 64px
   height 64px
 
-.home-page-info
+.home-page__info
+  width 252px
+  margin 0 auto
   font-size 24px
   margin-top 1em
 
-.home-page-links
+.links
   margin-top 1em
-  a
-    display inline-block
-    margin 0 0.5em
-    color #c55
 
-.cv-page
-  font-weight 300
-  padding-top 1em
-  .label
-    font-weight 300
-    margin-right 0.3em
-    display inline-block
-
-.cv-my-name
-  margin-top 8px
-
-.cv-page-photo
-  max-width 100px
-  max-height 100px
-
-.cv-back-to-home
-  margin-bottom 1em
-
-.cv-career-item
-  margin-bottom 2em
-
-.cv-career-content
-  padding-left 1.3em
-
-@media (min-width: 768px)
-  .cv-my-name
-    margin-top 25px
+.links__item
+  color = #c55
+  display inline-block
+  margin 0 0.5em
+  color color
+  text-decoration none
+  &:hover {
+    color darken(color, 30)
+  }
