--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -1,2 +1,41 @@
+@import url('http://fonts.googleapis.com/css?family=Exo+2:300')
+
 body
-  background-color white
+  font-family "Exo 2", "Open Sans", Arial, sans-serif
+  color #333
+
+.wrapper
+  display table
+  position absolute
+  width 100%
+  height 100%
+
+.wrapper-cell
+  display table-cell
+  vertical-align middle
+
+.wrapper-content
+  margin auto
+  text-align center
+
+.home-page
+  margin-top -8em
+  font-weight 300
+
+.about-me
+  font-size 24px
+  margin-top 1em
+  list-style-type none
+  padding 0
+
+.links
+  margin-top 1em
+
+.links__item
+  color = #c55
+  display inline-block
+  margin 0 0.5em
+  color color
+  text-decoration none
+  &:hover
+    color darken(color, 30)
