--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -1,8 +1,8 @@
-@import url('http://fonts.googleapis.com/css?family=Exo+2:300')
-
 body
-  font-family "Exo 2", "Open Sans", Arial, sans-serif
+  font-family 'Trebuchet MS', Arial, sans-serif
   color #333
+  -webkit-font-smoothing antialiased
+  -moz-osx-font-smoothing grayscale
 
 .wrapper
   display table
@@ -20,7 +20,6 @@ body
 
 .home-page
   margin-top -8em
-  font-weight 300
 
 .logo
   width 64px
@@ -29,6 +28,7 @@ body
 .about-me
   font-size 24px
   margin-top 1em
+  line-height 140%
   list-style-type none
   padding 0
 
