--- a/apps/skurid.in/src/pages/index.astro
+++ b/apps/skurid.in/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+const skills = ["TypeScript", "React", "GraphQL"] as const;
 ---
 
 <html lang="en">
@@ -7,9 +8,31 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Eugene Skuridin — Frontend Developer</title>
+		<meta
+			name="description"
+			content={`Eugene Skuridin — Frontend developer in the Netherlands. ${skills.join(
+				", "
+			)}.`}
+		/>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<div class="flex min-h-screen items-center justify-center p-5">
+			<div class="mb-32 flex flex-col items-start gap-6">
+				<h1
+					class="bg-gradient-to-b from-red-600 to-blue-600 bg-clip-text text-3xl text-transparent"
+				>
+					Hi,<br /> I'm Eugene,<br /> Frontend Developer<br /> based in the Netherlands
+				</h1>
+				<ul class="flex gap-4 text-gray-600" aria-label="My skills">
+					{skills.map((skill) => <li class="">{skill}</li>)}
+				</ul>
+				<a
+					href="https://www.linkedin.com/in/redfield1990"
+					class="inline-flex w-auto rounded-md bg-blue-700 py-2 px-6 text-white transition-all hover:bg-blue-900 active:translate-y-0.5"
+					>Find me on LinkedIn</a
+				>
+			</div>
+		</div>
 	</body>
 </html>
